--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,9 +5,10 @@
     align-items: center;
 }
 
-.Header-mainHeading{
+.Header-logo{
     color:blue;
-    width: 500px;
+    width: 900px;
+    text-align: left;
 }
 
 .Header-nav{
